index.css
/* ... */
@font-face {
  font-family: "SeasonSansTRIAL-Light";
  src:
    url("./fonts/seasons/SeasonSansTRIAL-Light.woff") format("woff"),
    url("./fonts/seasons/SeasonSansTRIAL-Light.woff2") format("woff2");
  font-weight: 300;
  font-style: normal;
}

@font-face {
  font-family: "SeasonMix-Medium";
  src:
    url("./fonts/seasonsmix/SeasonMixTRIAL-Medium.woff") format("woff"),
    url("./fonts/seasonsmix/SeasonMixTRIAL-Medium.woff2") format("woff2");
  font-weight: 800;
  font-style: normal;
}

@font-face {
  font-family: "SeasonMix-Regular";
  src:
    url("./fonts/seasonsmix/SeasonMixTRIAL-Regular.woff") format("woff"),
    url("./fonts/seasonsmix/SeasonMixTRIAL-Regular.woff2") format("woff2");
  font-weight: 420;
  font-style: normal;
}

.grid-container {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: grid;
  grid-template-columns: repeat(4, minmax(0, 1fr));
  pointer-events: none;
  z-index: 0;
}

.grid-box {
  border-right: 1px solid #000;
  opacity: 50%;
}

.grid-box:last-child {
  border-right: 0;
}

.container {
  padding: 0 20px;
  position: relative;
  z-index: 1;
}

.overlay-bg-color {
  position: relative;
  z-index: 1;
  background-color: #fcf4eb;
}

#navbar {
  position: fixed;
  background-color: #fcf4eb;
  top: 0;
  height: 150px;
  width: 100%;
  z-index: 1000;
  transition: all 0.3s ease;
}

#navbar.scrolled {
  background: rgba(252, 244, 235, 0.55);
  backdrop-filter: blur(24px);
  -webkit-backdrop-filter: blur(24px);
}

#banner {
  display: flex;
  height: 40px;
}

.banner-textbox {
  display: flex;
  align-items: center;
  background-color: #f96243;
  width: 75%;
  font-family: "SeasonSansTRIAL-Medium";
  font-size: 16px;
}

.lang-togglebox {
  width: 25%;
  height: 100%;
  display: flex;
  align-items: center;
}

.mobile-lang-togglebox {
  display: none;
}

.lang-togglebox a {
  margin-left: 34px;
  text-decoration: none;
  color: #000;
}

.selected {
  background-color: #f96243;
  padding: 1px 14px 1px 6px;
  text-align: left;
}

#navigation {
  position: relative;
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 23px 0;
}

.aral {
  width: 155px;
  height: 65px;
}

.menu {
  width: 880px;
}

#mobile-menu {
  display: none;
}

.menu > ul {
  display: flex;
  justify-content: space-between;
  list-style-type: none;
}

.menu > ul > li > a {
  font-family: "SeasonSansTRIAL-Regular";
  text-decoration: none;
  color: #000;
}

.school {
  width: 246px;
  height: 63px;
  margin-right: 24px;
}

.square {
  position: absolute;
  background-color: #000;
  z-index: 1;
  width: 21px;
  height: 21px;
  left: 50%;
  top: 90%;
  transform: translateX(-50%);
}

#header {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  margin-top: 173px;
  position: relative;
  z-index: 2;
  height: 100%;
}

.header-box {
  grid-column: 2/2;
  display: flex;
  align-items: center;
  height: 500px;
  border-top: 1px solid #000;
  border-bottom: 1px solid #000;
  margin: auto 0;
}

.header-text {
  width: 100%;
  max-width: 882px;
  padding: clamp(40px, 6vw, 93px) clamp(20px, 5vw, 72px);
}

.header-text p {
  font-size: clamp(18px, 2.5vw, 36px);
  font-family: "SeasonMix-Regular";
}
.header-text p > span {
  font-family: "SeasonMix-Medium";
}

#header-image {
  grid-column: 1/2;
  height: 664px;
  margin: auto 0;
}

#header-image img {
  width: 100%;
  height: 100%;
  object-fit: none;
}

#intro {
  display: grid;
  grid-template-columns: repeat(4, minmax(0, 1fr));
  border-top: 1px solid #000;
  margin-top: 40px;
}

.intro-left-box {
  grid-column: 1 / 1;
  aspect-ratio: 1 / 1;
  position: relative;
  margin-top: 150px;
}

.intro-info {
  grid-column: 2 / 4;
  padding: 123px 40px 34px 40px;
  font-size: 30px;
  font-family: "SeasonMix-Regular";
  border-right: 1px solid rgba(0, 0, 0, 0.5);
}

.intro-right-box {
  grid-column: 4 / 5;
  width: min(100%, 256px);
  aspect-ratio: 1 / 1;
  height: auto;
  position: relative;
}

.intro-info > p:first-child {
  font-family: "SeasonMix-Medium";
}

.intro-left-box svg,
.intro-right-box svg {
  position: absolute;
  width: 100%;
  height: 100%;
}

.corner-left {
  position: absolute;
  width: 20px;
  height: 20px;
  background: black;
  top: 0;
  right: -9px;
  z-index: 2;
}

.corner-right {
  position: absolute;
  width: 20px;
  height: 20px;
  background: #f96243;
  bottom: 0;
  right: 0;
}

.apply-box {
  position: relative;
  background-color: #f96243;
  grid-column: 3 / 5;
  height: 90px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  cursor: pointer;
}

.apply-box:hover {
  background-color: #000;
  color: white;
}

.apply-box:hover .square-shape {
  background-color: #f96243;
}

.deadline-box {
  max-width: 210px;
  font-family: "SeasonMix-Regular";
  font-size: 16px;
  margin-left: 31px;
}

.deadline-box > p:first-child {
  font-family: "SeasonMix-Medium";
}

.square-shape {
  background-color: #000;
  z-index: 11;
  width: 21px;
  height: 21px;
  margin-right: 33px;
}

#climate {
  display: grid;
  grid-template-columns: repeat(2, minmax(0, 1fr));
  position: relative;
  z-index: 1;
  max-height: 760px;
}

.earth-photo {
  grid-column: 1/2;
  background-color: aqua;
  max-height: 760px;
}

.earth-photo img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.climate-description {
  grid-column: 2/3;
  background-color: #000;
  color: #fff;
  font-family: "SeasonSansTRIAL-Medium";
}

.climate-description p {
  width: min(100%, 458px);
  height: 620px;
  font-size: 16px;
  line-height: 24px;
  margin: 56px auto;
}

#programme-vision {
  display: grid;
  grid-template-columns: repeat(2, minmax(0, 1fr));
  position: relative;
  margin-top: 120px;
  border-top: 1px solid #000;
}

.programme-line-right {
  grid-column: 2/2;
  position: absolute;
  top: 610px;
  left: 0;
  width: 100%;
  height: 100%;
  pointer-events: none;
  z-index: 0;
}
/* ... */

